parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOLON var1 pnGOTOprincipal func1 principal
Rule 2     var1 -> var
Rule 3     var1 -> empty
Rule 4     func1 -> funcion func1
Rule 5     func1 -> empty
Rule 6     principal -> PRINCIPAL pnPrincipal2 LPAREN RPAREN bloque
Rule 7     var -> VAR var2
Rule 8     var2 -> type TWO_DOTS lista_ids pnDF2 var3
Rule 9     var3 -> var2
Rule 10    var3 -> empty
Rule 11    type -> tipo_simple
Rule 12    type -> tipo_compuesto
Rule 13    funcion -> FUNCION tipo_fun ID pnFunDec1 LPAREN parametros RPAREN pnFunDec4 var1 bloque pnFunDec7
Rule 14    tipo_fun -> VOID pn_1_setCurrentType
Rule 15    tipo_fun -> tipo_simple
Rule 16    parametros -> param
Rule 17    parametros -> empty
Rule 18    param -> tipo_simple ID pnFunDec_2_3 param1
Rule 19    param1 -> COMMA param
Rule 20    param1 -> empty
Rule 21    tipo_simple -> INT pn_1_setCurrentType
Rule 22    tipo_simple -> FLOAT pn_1_setCurrentType
Rule 23    tipo_simple -> CHAR pn_1_setCurrentType
Rule 24    tipo_compuesto -> DATAFRAME pn_1_setCurrentType pnDF
Rule 25    tipo_compuesto -> STRING pn_1_setCurrentType
Rule 26    lista_ids -> lista SEMICOLON
Rule 27    lista -> ID pn_2_addVariable dd lista1
Rule 28    dd -> dim_dec pnDimDec8
Rule 29    dd -> empty
Rule 30    lista1 -> COMMA lista
Rule 31    lista1 -> empty
Rule 32    dim_dec -> LBRACK pnDimDec2_3 CTE_INT pnDimDec5 RBRACK pn_7_decRenglones dim_dec1
Rule 33    dim_dec1 -> LBRACK CTE_INT pnDimDec6 RBRACK pn_8_decColumnas
Rule 34    dim_dec1 -> empty
Rule 35    dim_index -> LBRACK pnDimAccess2 pnExp6 exp pnActivaArray pnArregloAcc RBRACK pnExp7 dim_index1
Rule 36    dim_index1 -> LBRACK pnExp6 exp pnActivaArray RBRACK pnExp7 pnMatrizAcc
Rule 37    dim_index1 -> empty
Rule 38    bloque -> LBRACE est RBRACE
Rule 39    est -> estatutos est
Rule 40    est -> empty
Rule 41    estatutos -> asignacion
Rule 42    estatutos -> llamada
Rule 43    estatutos -> retorno
Rule 44    estatutos -> lectura
Rule 45    estatutos -> escritura
Rule 46    estatutos -> carga_datos
Rule 47    estatutos -> decision
Rule 48    estatutos -> condicional
Rule 49    estatutos -> no_condicional
Rule 50    estatutos -> funciones_especiales_void
Rule 51    asignacion -> variable ASSIGN pnSec1 exp SEMICOLON pnSec2
Rule 52    variable -> ID pnExp1 di
Rule 53    di -> dim_index
Rule 54    di -> empty
Rule 55    llamada -> ID pnFunCall_1_2 LPAREN llamada1 RPAREN pnFunCall_5_6_llamada
Rule 56    llamada1 -> exp pnFunCall_3 llamada2
Rule 57    llamada1 -> empty
Rule 58    llamada2 -> COMMA llamada1
Rule 59    llamada2 -> empty
Rule 60    retorno -> REGRESA pnSec3 LPAREN exp RPAREN pnRetorno SEMICOLON
Rule 61    lectura -> LEE pnSec3 LPAREN variable RPAREN SEMICOLON pnSec4 pnSec5
Rule 62    escritura -> ESCRIBE pnSec3 LPAREN esc RPAREN SEMICOLON pnSec5
Rule 63    esc -> esc1 esc2
Rule 64    esc1 -> exp pnSec4
Rule 65    esc2 -> COMMA esc
Rule 66    esc2 -> empty
Rule 67    carga_datos -> CARGA LPAREN ID pnExp1 COMMA CTE_STR pnCteStr COMMA ca COMMA ca RPAREN SEMICOLON pnCarga
Rule 68    ca -> ID pnExp1
Rule 69    ca -> CTE_INT pnCteInt
Rule 70    decision -> SI LPAREN expresion RPAREN pnCond1 ENTONCES bloque sino pnCond2
Rule 71    sino -> SINO pnCond3 bloque
Rule 72    sino -> empty
Rule 73    condicional -> MIENTRAS pnCiclos1 LPAREN expresion RPAREN pnCiclos2 HAZ bloque pnCiclos3
Rule 74    no_condicional -> DESDE pnCiclos4 variable ASSIGN pnSec1 exp pnCiclos5 HASTA pnCiclos6 exp pnCiclos7 HACER bloque pnCiclos8
Rule 75    funciones_especiales_void -> VARIABLES pnFunEsp1 LPAREN ID COMMA ID COMMA ID RPAREN SEMICOLON
Rule 76    funciones_especiales_void -> HISTOGRAMA pnFunEsp1 LPAREN ID pnExp1 COMMA CTE_INT pnCteInt COMMA CTE_INT pnCteInt RPAREN SEMICOLON pnFunEspVoid1
Rule 77    funciones_especiales_void -> PLOTLINE pnFunEsp1 LPAREN ca COMMA ca COMMA CTE_INT pnCteInt RPAREN SEMICOLON pnFunEspVoid1
Rule 78    funciones_especiales -> fe LPAREN ID pnExp1 COMMA CTE_INT pnCteInt COMMA CTE_INT pnCteInt RPAREN pnFunEsp2
Rule 79    funciones_especiales -> CORRELACION pnFunEsp1 LPAREN ID pnExp1 COMMA ID pnExp1 COMMA CTE_INT pnCteInt COMMA CTE_INT pnCteInt RPAREN pnFunEsp3
Rule 80    fe -> MEDIA pnFunEsp1
Rule 81    fe -> MEDIANA pnFunEsp1
Rule 82    fe -> MODA pnFunEsp1
Rule 83    fe -> VARIANZA pnFunEsp1
Rule 84    var_cte -> CTE_CH pnCteChar
Rule 85    var_cte -> CTE_STR pnCteStr
Rule 86    var_cte -> SUB pnNeg var_num
Rule 87    var_cte -> var_num
Rule 88    var_num -> CTE_INT pnCteInt
Rule 89    var_num -> CTE_FLOAT pnCteFloat
Rule 90    expresion -> mega_exp expresion1
Rule 91    expresion1 -> ASSIGN expresion
Rule 92    expresion1 -> empty
Rule 93    mega_exp -> super_exp meg
Rule 94    meg -> op_l pnExp10 mega_exp pnExp11
Rule 95    meg -> empty
Rule 96    op_l -> AND
Rule 97    op_l -> OR
Rule 98    super_exp -> exp sp
Rule 99    sp -> op_r exp pnExp9
Rule 100   sp -> empty
Rule 101   op_r -> LT pnExp8
Rule 102   op_r -> GT pnExp8
Rule 103   op_r -> LE pnExp8
Rule 104   op_r -> GE pnExp8
Rule 105   op_r -> NOT_EQUAL pnExp8
Rule 106   op_r -> EQUAL pnExp8
Rule 107   exp -> termino pnExp4 exp1
Rule 108   exp1 -> op_a exp
Rule 109   exp1 -> empty
Rule 110   op_a -> ADD pnExp2
Rule 111   op_a -> SUB pnExp2
Rule 112   termino -> factor pnExp5 term
Rule 113   term -> op_a1 termino
Rule 114   term -> empty
Rule 115   op_a1 -> MUL pnExp3
Rule 116   op_a1 -> DIV pnExp3
Rule 117   factor -> var_cte
Rule 118   factor -> LPAREN pnExp6 exp RPAREN pnExp7
Rule 119   factor -> variable
Rule 120   factor -> llamada
Rule 121   factor -> funciones_especiales
Rule 122   empty -> <empty>
Rule 123   pnGOTOprincipal -> <empty>
Rule 124   pnPrincipal2 -> <empty>
Rule 125   pnDF -> <empty>
Rule 126   pnDF2 -> <empty>
Rule 127   pn_1_setCurrentType -> <empty>
Rule 128   pn_2_addVariable -> <empty>
Rule 129   pn_7_decRenglones -> <empty>
Rule 130   pn_8_decColumnas -> <empty>
Rule 131   pnFunDec1 -> <empty>
Rule 132   pnFunDec_2_3 -> <empty>
Rule 133   pnFunDec4 -> <empty>
Rule 134   pnFunDec7 -> <empty>
Rule 135   pnFunCall_1_2 -> <empty>
Rule 136   pnFunCall_3 -> <empty>
Rule 137   pnFunCall_5_6_llamada -> <empty>
Rule 138   pnFunEsp1 -> <empty>
Rule 139   pnFunEsp2 -> <empty>
Rule 140   pnFunEsp3 -> <empty>
Rule 141   pnFunEspVoid1 -> <empty>
Rule 142   pnNeg -> <empty>
Rule 143   pnCteInt -> <empty>
Rule 144   pnCteFloat -> <empty>
Rule 145   pnCteChar -> <empty>
Rule 146   pnCteStr -> <empty>
Rule 147   pnExp1 -> <empty>
Rule 148   pnExp2 -> <empty>
Rule 149   pnExp3 -> <empty>
Rule 150   pnExp4 -> <empty>
Rule 151   pnExp5 -> <empty>
Rule 152   pnExp6 -> <empty>
Rule 153   pnExp7 -> <empty>
Rule 154   pnExp8 -> <empty>
Rule 155   pnExp9 -> <empty>
Rule 156   pnExp10 -> <empty>
Rule 157   pnExp11 -> <empty>
Rule 158   pnSec1 -> <empty>
Rule 159   pnSec2 -> <empty>
Rule 160   pnSec3 -> <empty>
Rule 161   pnSec4 -> <empty>
Rule 162   pnSec5 -> <empty>
Rule 163   pnCond1 -> <empty>
Rule 164   pnCond2 -> <empty>
Rule 165   pnCond3 -> <empty>
Rule 166   pnCiclos1 -> <empty>
Rule 167   pnCiclos2 -> <empty>
Rule 168   pnCiclos3 -> <empty>
Rule 169   pnCiclos4 -> <empty>
Rule 170   pnCiclos5 -> <empty>
Rule 171   pnCiclos6 -> <empty>
Rule 172   pnCiclos7 -> <empty>
Rule 173   pnCiclos8 -> <empty>
Rule 174   pnRetorno -> <empty>
Rule 175   pnDimDec2_3 -> <empty>
Rule 176   pnDimDec5 -> <empty>
Rule 177   pnDimDec6 -> <empty>
Rule 178   pnDimDec8 -> <empty>
Rule 179   pnDimAccess2 -> <empty>
Rule 180   pnArregloAcc -> <empty>
Rule 181   pnMatrizAcc -> <empty>
Rule 182   pnActivaArray -> <empty>
Rule 183   pnCarga -> <empty>

Terminals, with rules where they appear

ADD                  : 110
AND                  : 96
ASSIGN               : 51 74 91
CARGA                : 67
CHAR                 : 23
COMMA                : 19 30 58 65 67 67 67 75 75 76 76 77 77 78 78 79 79 79
COMMENT              : 
CORRELACION          : 79
CTE_CH               : 84
CTE_FLOAT            : 89
CTE_INT              : 32 33 69 76 76 77 78 78 79 79 88
CTE_STR              : 67 85
DATAFRAME            : 24
DESDE                : 74
DIV                  : 116
ENTONCES             : 70
EQUAL                : 106
ESCRIBE              : 62
FLOAT                : 22
FUNCION              : 13
GE                   : 104
GT                   : 102
HACER                : 74
HASTA                : 74
HAZ                  : 73
HISTOGRAMA           : 76
ID                   : 1 13 18 27 52 55 67 68 75 75 75 76 78 79 79
INT                  : 21
LBRACE               : 38
LBRACK               : 32 33 35 36
LE                   : 103
LEE                  : 61
LPAREN               : 6 13 55 60 61 62 67 70 73 75 76 77 78 79 118
LT                   : 101
MEDIA                : 80
MEDIANA              : 81
MIENTRAS             : 73
MODA                 : 82
MUL                  : 115
NOT_EQUAL            : 105
OR                   : 97
PLOTLINE             : 77
PRINCIPAL            : 6
PROGRAMA             : 1
RBRACE               : 38
RBRACK               : 32 33 35 36
REGRESA              : 60
RPAREN               : 6 13 55 60 61 62 67 70 73 75 76 77 78 79 118
SEMICOLON            : 1 26 51 60 61 62 67 75 76 77
SI                   : 70
SINO                 : 71
STRING               : 25
SUB                  : 86 111
TWO_DOTS             : 8
VAR                  : 7
VARIABLES            : 75
VARIANZA             : 83
VOID                 : 14
error                : 

Nonterminals, with rules where they appear

asignacion           : 41
bloque               : 6 13 70 71 73 74
ca                   : 67 67 77 77
carga_datos          : 46
condicional          : 48
dd                   : 27
decision             : 47
di                   : 52
dim_dec              : 28
dim_dec1             : 32
dim_index            : 53
dim_index1           : 35
empty                : 3 5 10 17 20 29 31 34 37 40 54 57 59 66 72 92 95 100 109 114
esc                  : 62 65
esc1                 : 63
esc2                 : 63
escritura            : 45
est                  : 38 39
estatutos            : 39
exp                  : 35 36 51 56 60 64 74 74 98 99 108 118
exp1                 : 107
expresion            : 70 73 91
expresion1           : 90
factor               : 112
fe                   : 78
func1                : 1 4
funcion              : 4
funciones_especiales : 121
funciones_especiales_void : 50
lectura              : 44
lista                : 26 30
lista1               : 27
lista_ids            : 8
llamada              : 42 120
llamada1             : 55 58
llamada2             : 56
meg                  : 93
mega_exp             : 90 94
no_condicional       : 49
op_a                 : 108
op_a1                : 113
op_l                 : 94
op_r                 : 99
param                : 16 19
param1               : 18
parametros           : 13
pnActivaArray        : 35 36
pnArregloAcc         : 35
pnCarga              : 67
pnCiclos1            : 73
pnCiclos2            : 73
pnCiclos3            : 73
pnCiclos4            : 74
pnCiclos5            : 74
pnCiclos6            : 74
pnCiclos7            : 74
pnCiclos8            : 74
pnCond1              : 70
pnCond2              : 70
pnCond3              : 71
pnCteChar            : 84
pnCteFloat           : 89
pnCteInt             : 69 76 76 77 78 78 79 79 88
pnCteStr             : 67 85
pnDF                 : 24
pnDF2                : 8
pnDimAccess2         : 35
pnDimDec2_3          : 32
pnDimDec5            : 32
pnDimDec6            : 33
pnDimDec8            : 28
pnExp1               : 52 67 68 76 78 79 79
pnExp10              : 94
pnExp11              : 94
pnExp2               : 110 111
pnExp3               : 115 116
pnExp4               : 107
pnExp5               : 112
pnExp6               : 35 36 118
pnExp7               : 35 36 118
pnExp8               : 101 102 103 104 105 106
pnExp9               : 99
pnFunCall_1_2        : 55
pnFunCall_3          : 56
pnFunCall_5_6_llamada : 55
pnFunDec1            : 13
pnFunDec4            : 13
pnFunDec7            : 13
pnFunDec_2_3         : 18
pnFunEsp1            : 75 76 77 79 80 81 82 83
pnFunEsp2            : 78
pnFunEsp3            : 79
pnFunEspVoid1        : 76 77
pnGOTOprincipal      : 1
pnMatrizAcc          : 36
pnNeg                : 86
pnPrincipal2         : 6
pnRetorno            : 60
pnSec1               : 51 74
pnSec2               : 51
pnSec3               : 60 61 62
pnSec4               : 61 64
pnSec5               : 61 62
pn_1_setCurrentType  : 14 21 22 23 24 25
pn_2_addVariable     : 27
pn_7_decRenglones    : 32
pn_8_decColumnas     : 33
principal            : 1
programa             : 0
retorno              : 43
sino                 : 70
sp                   : 98
super_exp            : 93
term                 : 112
termino              : 107 113
tipo_compuesto       : 12
tipo_fun             : 13
tipo_simple          : 11 15 18
type                 : 8
var                  : 2
var1                 : 1 13
var2                 : 7 9
var3                 : 8
var_cte              : 117
var_num              : 86 87
variable             : 51 61 74 119

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOLON var1 pnGOTOprincipal func1 principal

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOLON var1 pnGOTOprincipal func1 principal

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOLON var1 pnGOTOprincipal func1 principal

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOLON . var1 pnGOTOprincipal func1 principal
    (2) var1 -> . var
    (3) var1 -> . empty
    (7) var -> . VAR var2
    (122) empty -> .

    VAR             shift and go to state 8
    FUNCION         reduce using rule 122 (empty -> .)
    PRINCIPAL       reduce using rule 122 (empty -> .)

    var1                           shift and go to state 5
    var                            shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) programa -> PROGRAMA ID SEMICOLON var1 . pnGOTOprincipal func1 principal
    (123) pnGOTOprincipal -> .

    FUNCION         reduce using rule 123 (pnGOTOprincipal -> .)
    PRINCIPAL       reduce using rule 123 (pnGOTOprincipal -> .)

    pnGOTOprincipal                shift and go to state 9

state 6

    (2) var1 -> var .

    FUNCION         reduce using rule 2 (var1 -> var .)
    PRINCIPAL       reduce using rule 2 (var1 -> var .)
    LBRACE          reduce using rule 2 (var1 -> var .)


state 7

    (3) var1 -> empty .

    FUNCION         reduce using rule 3 (var1 -> empty .)
    PRINCIPAL       reduce using rule 3 (var1 -> empty .)
    LBRACE          reduce using rule 3 (var1 -> empty .)


state 8

    (7) var -> VAR . var2
    (8) var2 -> . type TWO_DOTS lista_ids pnDF2 var3
    (11) type -> . tipo_simple
    (12) type -> . tipo_compuesto
    (21) tipo_simple -> . INT pn_1_setCurrentType
    (22) tipo_simple -> . FLOAT pn_1_setCurrentType
    (23) tipo_simple -> . CHAR pn_1_setCurrentType
    (24) tipo_compuesto -> . DATAFRAME pn_1_setCurrentType pnDF
    (25) tipo_compuesto -> . STRING pn_1_setCurrentType

    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    STRING          shift and go to state 18

    var2                           shift and go to state 10
    type                           shift and go to state 11
    tipo_simple                    shift and go to state 12
    tipo_compuesto                 shift and go to state 13

state 9

    (1) programa -> PROGRAMA ID SEMICOLON var1 pnGOTOprincipal . func1 principal
    (4) func1 -> . funcion func1
    (5) func1 -> . empty
    (13) funcion -> . FUNCION tipo_fun ID pnFunDec1 LPAREN parametros RPAREN pnFunDec4 var1 bloque pnFunDec7
    (122) empty -> .

    FUNCION         shift and go to state 22
    PRINCIPAL       reduce using rule 122 (empty -> .)

    func1                          shift and go to state 19
    funcion                        shift and go to state 20
    empty                          shift and go to state 21

state 10

    (7) var -> VAR var2 .

    FUNCION         reduce using rule 7 (var -> VAR var2 .)
    PRINCIPAL       reduce using rule 7 (var -> VAR var2 .)
    LBRACE          reduce using rule 7 (var -> VAR var2 .)


state 11

    (8) var2 -> type . TWO_DOTS lista_ids pnDF2 var3

    TWO_DOTS        shift and go to state 23


state 12

    (11) type -> tipo_simple .

    TWO_DOTS        reduce using rule 11 (type -> tipo_simple .)


state 13

    (12) type -> tipo_compuesto .

    TWO_DOTS        reduce using rule 12 (type -> tipo_compuesto .)


state 14

    (21) tipo_simple -> INT . pn_1_setCurrentType
    (127) pn_1_setCurrentType -> .

    TWO_DOTS        reduce using rule 127 (pn_1_setCurrentType -> .)
    ID              reduce using rule 127 (pn_1_setCurrentType -> .)

    pn_1_setCurrentType            shift and go to state 24

state 15

    (22) tipo_simple -> FLOAT . pn_1_setCurrentType
    (127) pn_1_setCurrentType -> .

    TWO_DOTS        reduce using rule 127 (pn_1_setCurrentType -> .)
    ID              reduce using rule 127 (pn_1_setCurrentType -> .)

    pn_1_setCurrentType            shift and go to state 25

state 16

    (23) tipo_simple -> CHAR . pn_1_setCurrentType
    (127) pn_1_setCurrentType -> .

    TWO_DOTS        reduce using rule 127 (pn_1_setCurrentType -> .)
    ID              reduce using rule 127 (pn_1_setCurrentType -> .)

    pn_1_setCurrentType            shift and go to state 26

state 17

    (24) tipo_compuesto -> DATAFRAME . pn_1_setCurrentType pnDF
    (127) pn_1_setCurrentType -> .

    TWO_DOTS        reduce using rule 127 (pn_1_setCurrentType -> .)

    pn_1_setCurrentType            shift and go to state 27

state 18

    (25) tipo_compuesto -> STRING . pn_1_setCurrentType
    (127) pn_1_setCurrentType -> .

    TWO_DOTS        reduce using rule 127 (pn_1_setCurrentType -> .)

    pn_1_setCurrentType            shift and go to state 28

state 19

    (1) programa -> PROGRAMA ID SEMICOLON var1 pnGOTOprincipal func1 . principal
    (6) principal -> . PRINCIPAL pnPrincipal2 LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 30

    principal                      shift and go to state 29

state 20

    (4) func1 -> funcion . func1
    (4) func1 -> . funcion func1
    (5) func1 -> . empty
    (13) funcion -> . FUNCION tipo_fun ID pnFunDec1 LPAREN parametros RPAREN pnFunDec4 var1 bloque pnFunDec7
    (122) empty -> .

    FUNCION         shift and go to state 22
    PRINCIPAL       reduce using rule 122 (empty -> .)

    funcion                        shift and go to state 20
    func1                          shift and go to state 31
    empty                          shift and go to state 21

state 21

    (5) func1 -> empty .

    PRINCIPAL       reduce using rule 5 (func1 -> empty .)


state 22

    (13) funcion -> FUNCION . tipo_fun ID pnFunDec1 LPAREN parametros RPAREN pnFunDec4 var1 bloque pnFunDec7
    (14) tipo_fun -> . VOID pn_1_setCurrentType
    (15) tipo_fun -> . tipo_simple
    (21) tipo_simple -> . INT pn_1_setCurrentType
    (22) tipo_simple -> . FLOAT pn_1_setCurrentType
    (23) tipo_simple -> . CHAR pn_1_setCurrentType

    VOID            shift and go to state 33
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    tipo_fun                       shift and go to state 32
    tipo_simple                    shift and go to state 34

state 23

    (8) var2 -> type TWO_DOTS . lista_ids pnDF2 var3
    (26) lista_ids -> . lista SEMICOLON
    (27) lista -> . ID pn_2_addVariable dd lista1

    ID              shift and go to state 37

    lista_ids                      shift and go to state 35
    lista                          shift and go to state 36

state 24

    (21) tipo_simple -> INT pn_1_setCurrentType .

    TWO_DOTS        reduce using rule 21 (tipo_simple -> INT pn_1_setCurrentType .)
    ID              reduce using rule 21 (tipo_simple -> INT pn_1_setCurrentType .)


state 25

    (22) tipo_simple -> FLOAT pn_1_setCurrentType .

    TWO_DOTS        reduce using rule 22 (tipo_simple -> FLOAT pn_1_setCurrentType .)
    ID              reduce using rule 22 (tipo_simple -> FLOAT pn_1_setCurrentType .)


state 26

    (23) tipo_simple -> CHAR pn_1_setCurrentType .

    TWO_DOTS        reduce using rule 23 (tipo_simple -> CHAR pn_1_setCurrentType .)
    ID              reduce using rule 23 (tipo_simple -> CHAR pn_1_setCurrentType .)


state 27

    (24) tipo_compuesto -> DATAFRAME pn_1_setCurrentType . pnDF
    (125) pnDF -> .

    TWO_DOTS        reduce using rule 125 (pnDF -> .)

    pnDF                           shift and go to state 38

state 28

    (25) tipo_compuesto -> STRING pn_1_setCurrentType .

    TWO_DOTS        reduce using rule 25 (tipo_compuesto -> STRING pn_1_setCurrentType .)


state 29

    (1) programa -> PROGRAMA ID SEMICOLON var1 pnGOTOprincipal func1 principal .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOLON var1 pnGOTOprincipal func1 principal .)


state 30

    (6) principal -> PRINCIPAL . pnPrincipal2 LPAREN RPAREN bloque
    (124) pnPrincipal2 -> .

    LPAREN          reduce using rule 124 (pnPrincipal2 -> .)

    pnPrincipal2                   shift and go to state 39

state 31

    (4) func1 -> funcion func1 .

    PRINCIPAL       reduce using rule 4 (func1 -> funcion func1 .)


state 32

    (13) funcion -> FUNCION tipo_fun . ID pnFunDec1 LPAREN parametros RPAREN pnFunDec4 var1 bloque pnFunDec7

    ID              shift and go to state 40


state 33

    (14) tipo_fun -> VOID . pn_1_setCurrentType
    (127) pn_1_setCurrentType -> .

    ID              reduce using rule 127 (pn_1_setCurrentType -> .)

    pn_1_setCurrentType            shift and go to state 41

state 34

    (15) tipo_fun -> tipo_simple .

    ID              reduce using rule 15 (tipo_fun -> tipo_simple .)


state 35

    (8) var2 -> type TWO_DOTS lista_ids . pnDF2 var3
    (126) pnDF2 -> .

    INT             reduce using rule 126 (pnDF2 -> .)
    FLOAT           reduce using rule 126 (pnDF2 -> .)
    CHAR            reduce using rule 126 (pnDF2 -> .)
    DATAFRAME       reduce using rule 126 (pnDF2 -> .)
    STRING          reduce using rule 126 (pnDF2 -> .)
    FUNCION         reduce using rule 126 (pnDF2 -> .)
    PRINCIPAL       reduce using rule 126 (pnDF2 -> .)
    LBRACE          reduce using rule 126 (pnDF2 -> .)

    pnDF2                          shift and go to state 42

state 36

    (26) lista_ids -> lista . SEMICOLON

    SEMICOLON       shift and go to state 43


state 37

    (27) lista -> ID . pn_2_addVariable dd lista1
    (128) pn_2_addVariable -> .

    LBRACK          reduce using rule 128 (pn_2_addVariable -> .)
    COMMA           reduce using rule 128 (pn_2_addVariable -> .)
    SEMICOLON       reduce using rule 128 (pn_2_addVariable -> .)

    pn_2_addVariable               shift and go to state 44

state 38

    (24) tipo_compuesto -> DATAFRAME pn_1_setCurrentType pnDF .

    TWO_DOTS        reduce using rule 24 (tipo_compuesto -> DATAFRAME pn_1_setCurrentType pnDF .)


state 39

    (6) principal -> PRINCIPAL pnPrincipal2 . LPAREN RPAREN bloque

    LPAREN          shift and go to state 45


state 40

    (13) funcion -> FUNCION tipo_fun ID . pnFunDec1 LPAREN parametros RPAREN pnFunDec4 var1 bloque pnFunDec7
    (131) pnFunDec1 -> .

    LPAREN          reduce using rule 131 (pnFunDec1 -> .)

    pnFunDec1                      shift and go to state 46

state 41

    (14) tipo_fun -> VOID pn_1_setCurrentType .

    ID              reduce using rule 14 (tipo_fun -> VOID pn_1_setCurrentType .)


state 42

    (8) var2 -> type TWO_DOTS lista_ids pnDF2 . var3
    (9) var3 -> . var2
    (10) var3 -> . empty
    (8) var2 -> . type TWO_DOTS lista_ids pnDF2 var3
    (122) empty -> .
    (11) type -> . tipo_simple
    (12) type -> . tipo_compuesto
    (21) tipo_simple -> . INT pn_1_setCurrentType
    (22) tipo_simple -> . FLOAT pn_1_setCurrentType
    (23) tipo_simple -> . CHAR pn_1_setCurrentType
    (24) tipo_compuesto -> . DATAFRAME pn_1_setCurrentType pnDF
    (25) tipo_compuesto -> . STRING pn_1_setCurrentType

    FUNCION         reduce using rule 122 (empty -> .)
    PRINCIPAL       reduce using rule 122 (empty -> .)
    LBRACE          reduce using rule 122 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    STRING          shift and go to state 18

    type                           shift and go to state 11
    var3                           shift and go to state 47
    var2                           shift and go to state 48
    empty                          shift and go to state 49
    tipo_simple                    shift and go to state 12
    tipo_compuesto                 shift and go to state 13

state 43

    (26) lista_ids -> lista SEMICOLON .

    INT             reduce using rule 26 (lista_ids -> lista SEMICOLON .)
    FLOAT           reduce using rule 26 (lista_ids -> lista SEMICOLON .)
    CHAR            reduce using rule 26 (lista_ids -> lista SEMICOLON .)
    DATAFRAME       reduce using rule 26 (lista_ids -> lista SEMICOLON .)
    STRING          reduce using rule 26 (lista_ids -> lista SEMICOLON .)
    FUNCION         reduce using rule 26 (lista_ids -> lista SEMICOLON .)
    PRINCIPAL       reduce using rule 26 (lista_ids -> lista SEMICOLON .)
    LBRACE          reduce using rule 26 (lista_ids -> lista SEMICOLON .)


state 44

    (27) lista -> ID pn_2_addVariable . dd lista1
    (28) dd -> . dim_dec pnDimDec8
    (29) dd -> . empty
    (32) dim_dec -> . LBRACK pnDimDec2_3 CTE_INT pnDimDec5 RBRACK pn_7_decRenglones dim_dec1
    (122) empty -> .

    LBRACK          shift and go to state 53
    COMMA           reduce using rule 122 (empty -> .)
    SEMICOLON       reduce using rule 122 (empty -> .)

    dd                             shift and go to state 50
    dim_dec                        shift and go to state 51
    empty                          shift and go to state 52

state 45

    (6) principal -> PRINCIPAL pnPrincipal2 LPAREN . RPAREN bloque

    RPAREN          shift and go to state 54


state 46

    (13) funcion -> FUNCION tipo_fun ID pnFunDec1 . LPAREN parametros RPAREN pnFunDec4 var1 bloque pnFunDec7

    LPAREN          shift and go to state 55


state 47

    (8) var2 -> type TWO_DOTS lista_ids pnDF2 var3 .

    FUNCION         reduce using rule 8 (var2 -> type TWO_DOTS lista_ids pnDF2 var3 .)
    PRINCIPAL       reduce using rule 8 (var2 -> type TWO_DOTS lista_ids pnDF2 var3 .)
    LBRACE          reduce using rule 8 (var2 -> type TWO_DOTS lista_ids pnDF2 var3 .)


state 48

    (9) var3 -> var2 .

    FUNCION         reduce using rule 9 (var3 -> var2 .)
    PRINCIPAL       reduce using rule 9 (var3 -> var2 .)
    LBRACE          reduce using rule 9 (var3 -> var2 .)


state 49

    (10) var3 -> empty .

    FUNCION         reduce using rule 10 (var3 -> empty .)
    PRINCIPAL       reduce using rule 10 (var3 -> empty .)
    LBRACE          reduce using rule 10 (var3 -> empty .)


state 50

    (27) lista -> ID pn_2_addVariable dd . lista1
    (30) lista1 -> . COMMA lista
    (31) lista1 -> . empty
    (122) empty -> .

    COMMA           shift and go to state 57
    SEMICOLON       reduce using rule 122 (empty -> .)

    lista1                         shift and go to state 56
    empty                          shift and go to state 58

state 51

    (28) dd -> dim_dec . pnDimDec8
    (178) pnDimDec8 -> .

    COMMA           reduce using rule 178 (pnDimDec8 -> .)
    SEMICOLON       reduce using rule 178 (pnDimDec8 -> .)

    pnDimDec8                      shift and go to state 59

state 52

    (29) dd -> empty .

    COMMA           reduce using rule 29 (dd -> empty .)
    SEMICOLON       reduce using rule 29 (dd -> empty .)


state 53

    (32) dim_dec -> LBRACK . pnDimDec2_3 CTE_INT pnDimDec5 RBRACK pn_7_decRenglones dim_dec1
    (175) pnDimDec2_3 -> .

    CTE_INT         reduce using rule 175 (pnDimDec2_3 -> .)

    pnDimDec2_3                    shift and go to state 60

state 54

    (6) principal -> PRINCIPAL pnPrincipal2 LPAREN RPAREN . bloque
    (38) bloque -> . LBRACE est RBRACE

    LBRACE          shift and go to state 62

    bloque                         shift and go to state 61

state 55

    (13) funcion -> FUNCION tipo_fun ID pnFunDec1 LPAREN . parametros RPAREN pnFunDec4 var1 bloque pnFunDec7
    (16) parametros -> . param
    (17) parametros -> . empty
    (18) param -> . tipo_simple ID pnFunDec_2_3 param1
    (122) empty -> .
    (21) tipo_simple -> . INT pn_1_setCurrentType
    (22) tipo_simple -> . FLOAT pn_1_setCurrentType
    (23) tipo_simple -> . CHAR pn_1_setCurrentType

    RPAREN          reduce using rule 122 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    parametros                     shift and go to state 63
    param                          shift and go to state 64
    empty                          shift and go to state 65
    tipo_simple                    shift and go to state 66

state 56

    (27) lista -> ID pn_2_addVariable dd lista1 .

    SEMICOLON       reduce using rule 27 (lista -> ID pn_2_addVariable dd lista1 .)


state 57

    (30) lista1 -> COMMA . lista
    (27) lista -> . ID pn_2_addVariable dd lista1

    ID              shift and go to state 37

    lista                          shift and go to state 67

state 58

    (31) lista1 -> empty .

    SEMICOLON       reduce using rule 31 (lista1 -> empty .)


state 59

    (28) dd -> dim_dec pnDimDec8 .

    COMMA           reduce using rule 28 (dd -> dim_dec pnDimDec8 .)
    SEMICOLON       reduce using rule 28 (dd -> dim_dec pnDimDec8 .)


state 60

    (32) dim_dec -> LBRACK pnDimDec2_3 . CTE_INT pnDimDec5 RBRACK pn_7_decRenglones dim_dec1

    CTE_INT         shift and go to state 68


state 61

    (6) principal -> PRINCIPAL pnPrincipal2 LPAREN RPAREN bloque .

    $end            reduce using rule 6 (principal -> PRINCIPAL pnPrincipal2 LPAREN RPAREN bloque .)


state 62
